--- a/src/components/CardsCompanies/CardsCompanies.css
+++ b/src/components/CardsCompanies/CardsCompanies.css
@@ -1,9 +1,9 @@
-img {
-    width: 120px;
-    height: 120px;
+.car__img {
+  width: 120px;
+  height: 120px;
 
-    object-fit: contain;
-    object-position: center;
+  object-fit: contain;
+  object-position: center;
 
-    border: 1px solid #e4e4e4;
+  border: 1px solid #e4e4e4;
 }
